Father's name, Mother's name, Dob, NID updated for users and therapist's.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,8 +30,11 @@
                 </div>
                 <button class="btn btn-primary" type="submit">Login</button>
             </form>
-            <a class="text-center" th:href="@{/}">Forget Password? </a>
-            <!--      TODO: Retrieve Password by user information-->
+
+            <a class="text-center" th:href="@{/show-forget-password-page}">Forget Password? </a>
+
+
+
             <div class="text-center">Not Registered?
                 <a class="text-center" th:href="@{/show-registration-page}">Register</a>
             </div>
