--- a/src/main/resources/templates/discussions/update-comment.html
+++ b/src/main/resources/templates/discussions/update-comment.html
@@ -33,53 +33,26 @@
 
             <!-- Comments Section -->
             <div class="mt-4">
-                <h3>Comments</h3>
-                <ul class="list-group" th:each="comment, commentIndex: ${discussion.commentList}">
-                    <li th:classappend="${commentIndex.odd}? 'list-group-item': 'list-group-item deep-ash-color'">
-                        <b>
-                            @<span th:text="${comment.user.userName}"></span>(Role = <span
-                                th:text="${comment.user.role}"></span>) advised:
-                        </b>
-                        <span th:text="${comment.commentContent}"> </span>
 
-                        <!-- Add update and delete buttons -->
-                        <span th:if="${isUser != null and !#strings.isEmpty(isUser) and isUser and comment.user.id == userId}">
-                                <a class="btn btn-warning btn-sm" role="button"
-                                   th:href="@{/show-update-comment-page(commentId=${comment.id}, discussionId=${discussion.id})}">
-                                    Update
-                                </a>
-                        </span>
-                        <span th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser and comment.user.id == userId)
-                                            or (isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">
-                                <a class="btn btn-danger btn-sm" role="button"
-                                   th:href="@{/comment-delete(commentId=${comment.id}, discussionId=${discussion.id})}">
-                                    Delete
-                                </a>
-                        </span>
-                        <div>
-                            <b>Commented On: </b> <span th:text="${comment.commentDate}"> </span>
-                            <br>
-                            <b>Updated On: </b> <span th:text="${comment.updatedDate}"> </span>
-
-                        </div>
-                    </li>
-                </ul>
-
-                <!-- Add New Comment -->
+                <!-- Update Comment -->
                 <div th:if="${(isUser != null and !#strings.isEmpty(isUser) and isUser)
                      or (isTherapist != null and !#strings.isEmpty(isTherapist) and isTherapist)
                      or (isAdmin != null and !#strings.isEmpty(isAdmin) and isAdmin)}">
                     <div class="mt-3">
                         <h4>Update Your Comment</h4>
-                        <form method="POST" th:action="@{/comment-update(discussionId=${discussion.id})}"
+                        <form method="POST" th:action="@{/discussion-comment-update(discussionId=${discussion.id})}"
                               th:object="${commentToUpdate}">
                             <div class="form-group">
-                                <label for="commentContent">Comment Here:</label>
+                                <label for="commentContent">Your Comment:</label>
                                 <textarea class="form-control" id="commentContent" required rows="3"
                                           th:field="*{commentContent}"></textarea>
                             </div>
                             <input th:field="*{id}" type="hidden"/>
-                            <button class="btn btn-primary" type="submit">Submit</button>
+                            <button class="btn btn-primary" type="submit">Update</button>
+                            <a class="btn btn-warning" role="button"
+                               th:href="@{/show-discussion-details(id=${discussion.id})}">
+                                Cancel
+                            </a>
                         </form>
                     </div>
                 </div>
