--- a/src/main/resources/templates/forget-password.html
+++ b/src/main/resources/templates/forget-password.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="fragments/common-header :: common-header"></div>
 <head>
-  <title>Forget Password-MHSN</title>
+    <title>Forget Password-MHSN</title>
 </head>
 <body>
-
+<!--TODO: Have to fix it-->
 <!-- Navbar -->
 
 <div th:replace="fragments/navbar :: navbar"></div>
@@ -14,56 +14,65 @@
 <div th:replace="fragments/sidebar :: sidebar"></div>
 
 <!-- Main content area -->
-<main role="main" class="main-content">
-  <div class="container">
-    <div class="pt-3">
-      <h1>User password change</h1>
-      <form th:action="@{/forget-password}" method="POST">
+<main class="main-content" role="main">
+    <div class="container">
+        <div class="pt-3">
+            <h1>User password change</h1>
+            <form method="POST" th:action="@{/forget-password}">
 
-        <!-- Question for forget Password -->
-        <div class="form-group">
-          <label for="question1">First Question </label>
-          <input class="form-control" id="question1" name = "question1" placeholder="Enter the first question you want to set for forger password" required type="question1">
-        </div>
-        <div class="form-group">
-          <label for="answer1">Answer For First Question </label>
-          <input class="form-control" id="answer1" name = "answer1" placeholder="Enter the first answer you set for forger password" required type="answer1">
-        </div>
-        <div class="form-group">
-          <label for="question2">Second Question </label>
-          <input class="form-control" id="question2" name = "question2" placeholder="Enter the second question you want to set for forger password" required type="question1">
-        </div>
-        <div class="form-group">
-          <label for="answer2">Answer For Second Question</label>
-          <input class="form-control" id="answer2" name = "answer2" placeholder="Enter the second answer you set for forger password" required type="answer2">
-        </div>
-
-
-        <!-- Password -->
-        <div class="form-group">
-          <label for="newPassword">New Password (At least 6 characters)</label>
-          <input class="form-control" id="newPassword" name = "newPassword" placeholder="Enter your new password" required type="password" pattern=".{6,}">
-        </div>
-        <div class="form-group">
-          <!-- Confirm Password -->
-          <label for="confirmPassword">Confirm Password  (At least 6 characters)</label>
-          <input class="form-control" id="confirmPassword" placeholder="Confirm your new password" required type="password" pattern=".{6,}">
-          <span id="passwordError" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-      </form>
+                <!-- Question for forget Password -->
+                <div class="form-group">
+                    <label for="question1">First Question </label>
+                    <input class="form-control" id="question1" name="question1"
+                           placeholder="Enter the first question you want to set for forger password" required
+                           type="question1">
+                </div>
+                <div class="form-group">
+                    <label for="answer1">Answer For First Question </label>
+                    <input class="form-control" id="answer1" name="answer1"
+                           placeholder="Enter the first answer you set for forger password" required type="answer1">
+                </div>
+                <div class="form-group">
+                    <label for="question2">Second Question </label>
+                    <input class="form-control" id="question2" name="question2"
+                           placeholder="Enter the second question you want to set for forger password" required
+                           type="question1">
+                </div>
+                <div class="form-group">
+                    <label for="answer2">Answer For Second Question</label>
+                    <input class="form-control" id="answer2" name="answer2"
+                           placeholder="Enter the second answer you set for forger password" required type="answer2">
+                </div>
 
 
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="newPassword">New Password (At least 6 characters)</label>
+                    <input class="form-control" id="newPassword" name="newPassword"
+                           pattern=".{6,}" placeholder="Enter your new password" required type="password">
+                </div>
+                <div class="form-group">
+                    <!-- Confirm Password -->
+                    <label for="confirmPassword">Confirm Password (At least 6 characters)</label>
+                    <input class="form-control" id="confirmPassword" pattern=".{6,}" placeholder="Confirm your new password"
+                           required type="password">
+                    <span class="text-danger" id="passwordError"></span>
+                </div>
+                <button class="btn btn-primary" type="submit">Update</button>
+            </form>
+
+
+        </div>
     </div>
-  </div>
-  <!--  Toast-->
-  <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;" th:if="${error}">
-    <div class="toast-header bg-dark">
-      <strong class="mr-auto text-white">Error</strong>
-      <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+    <!--  Toast-->
+    <div class="toast" style="position: absolute; top: 0; right: 0; margin-top: 80px; margin-right: 30px;"
+         th:if="${error}">
+        <div class="toast-header bg-dark">
+            <strong class="mr-auto text-white">Error</strong>
+            <button class="ml-2 mb-1 close" data-dismiss="toast" type="button">&times;</button>
+        </div>
+        <div class="toast-body bg-danger text-white" th:text="${error}"></div>
     </div>
-    <div class="toast-body bg-danger text-white" th:text="${error}"></div>
-  </div>
 
 </main>
 <!-- Footer -->
@@ -72,36 +81,36 @@
 <!-- Scripts -->
 <div th:replace="fragments/common-scripts :: common-scripts"></div>
 <script>
-  $(document).ready(function () {
-      // Script to activate Bootstrap Toast
-      $('.toast').toast({
-          autohide: true,
-          delay: 5000, // 5 seconds
-          animation: true,
-          position: 'top-end'
-      }).toast('show');
+    $(document).ready(function () {
+        // Script to activate Bootstrap Toast
+        $('.toast').toast({
+            autohide: true,
+            delay: 5000, // 5 seconds
+            animation: true,
+            position: 'top-end'
+        }).toast('show');
 
-      // Add an event listener to the form on submission
-      $("form").submit(function (event) {
-          // Get the values of the password and confirmPassword fields
-          var newPassword = $("#newPassword").val();
-          var confirmPassword = $("#confirmPassword").val();
+        // Add an event listener to the form on submission
+        $("form").submit(function (event) {
+            // Get the values of the password and confirmPassword fields
+            var newPassword = $("#newPassword").val();
+            var confirmPassword = $("#confirmPassword").val();
 
-          // Check if the passwords match and are at least 6 characters long
-          if (newPassword !== confirmPassword) {
-              // Display an error message
-              $("#passwordError").text("Passwords do not match");
-              event.preventDefault(); // Prevent form submission
-          } else if (oldPassword.length < 6 || newPassword.length < 6 || confirmPassword.length < 6 ) {
-              // Display an error message
-              $("#passwordError").text("Password must be at least 6 characters");
-              event.preventDefault(); // Prevent form submission
-          } else {
-              // Clear any previous error messages
-              $("#passwordError").text("");
-          }
-      });
-  });
+            // Check if the passwords match and are at least 6 characters long
+            if (newPassword !== confirmPassword) {
+                // Display an error message
+                $("#passwordError").text("Passwords do not match");
+                event.preventDefault(); // Prevent form submission
+            } else if (oldPassword.length < 6 || newPassword.length < 6 || confirmPassword.length < 6 ) {
+                // Display an error message
+                $("#passwordError").text("Password must be at least 6 characters");
+                event.preventDefault(); // Prevent form submission
+            } else {
+                // Clear any previous error messages
+                $("#passwordError").text("");
+            }
+        });
+    });
 </script>
 
 </body>
