--- a/src/main/resources/templates/events/event-details.html
+++ b/src/main/resources/templates/events/event-details.html
@@ -36,7 +36,14 @@
                 </div>
             </div>
 
-            <!--                    TODO : Need to add going section  -->
+            <!--                    TODO : Need to implement going section  -->
+            <br>
+            <div class="text-center">
+                <button class="btn btn-lg btn-success"><span>      Going        </span></button>
+                <span>          </span>
+                <button class="btn btn-lg btn-warning">Interested</button>
+            </div>
+
 
             <!-- Comments Section -->
             <div class="mt-4">
